# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: PythonCI.yml
page_loader/: __init__.py  cli.py  downloader.py  helpers.py  html_writer.py  logging.py  path_manager.py  resources_download.py  ru-hexlet-io-courses.html
page_loader/scripts/: page_loader.py
tests/: test_naming.py  test_page_loader.py
tests/fixtures/: example.html
